# pathogen

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
key_path/: Cargo.toml
key_path/src/: keypath_macro.rs  lib.rs  navigable.rs  tests.rs
key_path_macros/: Cargo.toml
key_path_macros/src/: keypath_mutable.rs  keypath_mutable.test.rs  lib.rs  navigable.test.rs
pathogen/: Cargo.toml
pathogen/src/: key_path.rs  key_path_mutable.rs  lib.rs
pathogen_macros/: Cargo.toml
pathogen_macros/src/: keypath_mutable.test.rs  lib.rs  navigable.rs  navigable.test.rs
tests/: Cargo.toml
tests/tests/: readme.rs
